2012-11-13 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Merge PATJobTransforms-00-04-32-branch:
        * Add eventSelectorQuery and inputTAG_AODFile to Configuration.py
        * Recognise and handle eventSelectorQuery and inputTAG_AODFile in AODtoDPD skeleton
        * Allow AOD to be recognised as an output of the a2d step in Configuration.py (allows for AOD skimming)
    * Tagging as PATJobTransforms-00-04-35
    *** Important: From this tag onwards you require PyJobTransformsCore >= 00-09-33 ***


2012-10-11 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Add inputNTUP_TOPFJETFile to MergeNTUP_trf LODPK.
    * Tagging as PATJobTransforms-00-04-34

2012-09-28 Maarten Boonekamp
	* adding NTUP_SMLIGHT to Reco_trf, MergeNTUP_trf
	* Tagging as PATJobTransforms-00-04-33
		
2012-09-25 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Tagging as PATJobTransforms-00-04-32

2012-09-24 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Patch for Reco_trf to automatically add tmpESD when input is BS/RDO
      and final outputs are made from ESD, but no output or tmpESD was specified
    * Small update to tmpESD filename (tmp.ESD.pool.root, consistent with DigiMReco_trf)

2012-09-19 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Get logfile GUIDs using uuid.uuid4() instead of uuidgen external call
    * Tagging as PATJobTransforms-00-04-31

2012-08-13 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Add outputNTUP_TOPFJETFile to Reco_trf, MergeNTUP_trf LODPK.
    * Tagging as PATJobTransforms-00-04-30    

2012-08-09 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Change skeleton.MergeHIT.py to move preExec/preInclude before detector description 
      set-up to allow the TRT to be switched off (original change by John Chapman in 00-04-27-01).

2012-08-07 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Reverting the NTUP_TRKVALID change for now for security
	  reasons. (Causes problems in devval, may cause problems