@@ -6,12 +6,12 @@ from PATJobTransforms.BaseOfBasicTrf import BaseOfBasicTrf
 from PyJobTransformsCore.trf import Author
 
 class AODtoTAGJobTransform( BaseOfBasicTrf ):
-    def __init__(self,inDic):
+    def __init__(self,inDic,lastInChain=True):
         BaseOfBasicTrf.__init__(self,inDic,
                                 authors = [ Author('Tulay Cuhadar Donszelmann', 'tcuhadar@cern.ch'),
                                             Author('David Cote', 'David.Cote@cern.ch')],
                                 skeleton='PATJobTransforms/skeleton.AODtoTAG_trf.py',
-                                help = __doc__ )
+                                help = __doc__, lastInChain=lastInChain)
 
     def matchEvents(self):
         self.logger().info("MatchEvents is not executed for AOD->TAG.")
